cmake_minimum_required(VERSION 3.16)
project(contest)

set(CMAKE_CXX_STANDARD 17)

add_executable(A "1/A.cpp")
add_executable(B "1/B.cpp")
add_executable(C "1/C.cpp")
add_executable(D "1/D.cpp")
add_executable(1296 1/1296.cpp)
add_executable(2025 1/2025.cpp)

add_executable(E 2/E.cpp)
add_executable(F 2/F.cpp)
add_executable(G 2/G.cpp)
add_executable(H 2/H.cpp)
add_executable(1322 2/1322.cpp)
add_executable(1207 2/1207.cpp)

add_executable(I 3/I.cpp)
add_executable(J.v1 3/J.v1.cpp)
add_executable(J.v2 3/J.v2.cpp)
add_executable(K 3/K.cpp)
add_executable(L 3/L.cpp)
add_executable(1494.v1 3/1494.v1.cpp)
add_executable(1494.v2 3/1494.v2.cpp)
add_executable(1521 3/1521.cpp)

add_executable(M 4/M.cpp)
add_executable(N 4/N.cpp)
add_executable(O 4/O.cpp)
add_executable(P 4/P.cpp)
add_executable(1450.v1 4/1450.v1.cpp)
add_executable(1450.v2 4/1450.v2.cpp)
add_executable(1450.v3 4/1450.v3.cpp)
add_executable(1806 4/1806.cpp)
